packages/kit/test/apps/basics/src/routes/errors/page-endpoint/index.svelte
<a id="get-implicit" href="/errors/page-endpoint/get-implicit">GET (implicit)</a>

<form action="/errors/page-endpoint/post-implicit" method="post">
	<button type="submit" id="post-implicit">POST (implicit)</button>
</form>
